added another endpoint for soundleaf
